force-app/main/default/objects/salesforce_contact__x/salesforce_contact__x.object-meta.xml
<CustomObject>
    <description>salesforce$contact</description>
    <externalDataSource>SFDC_DataLake</externalDataSource>
    <externalName>salesforce$contact</externalName>
    <label>Contact Data Lake</label>
    <pluralLabel>salesforce$contact</pluralLabel>
</CustomObject>