force-app/main/default/objects/salesforce_contact__x/fields/accountid__c.field-meta.xml
<CustomField>
    <fullName>accountid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>accountid</description>
    <externalDeveloperName>accountid</externalDeveloperName>
    <label>accountid</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>salesforce$contact</relationshipLabel>
    <relationshipName>salesforce_contact</relationshipName>
    <type>Lookup</type>
</CustomField>