force-app/main/default/objects/salesforce_contact__x/fields/createddate__c.field-meta.xml
<CustomField>
    <fullName>createddate__c</fullName>
    <description>createddate</description>
    <externalDeveloperName>createddate</externalDeveloperName>
    <label>createddate</label>
    <type>DateTime</type>
</CustomField>