force-app/main/default/objects/salesforce_contact__x/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <description>email</description>
    <externalDeveloperName>email</externalDeveloperName>
    <label>email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>