force-app/main/default/objects/salesforce_contact__x/fields/firstname__c.field-meta.xml
<CustomField>
    <fullName>firstname__c</fullName>
    <description>firstname</description>
    <externalDeveloperName>firstname</externalDeveloperName>
    <label>firstname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>