force-app/main/default/objects/salesforce_contact__x/fields/hc_err__c.field-meta.xml
<CustomField>
    <fullName>hc_err__c</fullName>
    <description>_hc_err</description>
    <externalDeveloperName>_hc_err</externalDeveloperName>
    <label>_hc_err</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>