force-app/main/default/objects/salesforce_contact__x/fields/hc_lastop__c.field-meta.xml
<CustomField>
    <fullName>hc_lastop__c</fullName>
    <description>_hc_lastop</description>
    <externalDeveloperName>_hc_lastop</externalDeveloperName>
    <label>_hc_lastop</label>
    <length>32</length>
    <type>Text</type>
</CustomField>