force-app/main/default/objects/salesforce_contact__x/fields/isdeleted__c.field-meta.xml
<CustomField>
    <fullName>isdeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isdeleted</description>
    <externalDeveloperName>isdeleted</externalDeveloperName>
    <label>isdeleted</label>
    <type>Checkbox</type>
</CustomField>