force-app/main/default/objects/salesforce_contact__x/fields/lastname__c.field-meta.xml
<CustomField>
    <fullName>lastname__c</fullName>
    <description>lastname</description>
    <externalDeveloperName>lastname</externalDeveloperName>
    <label>lastname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>