force-app/main/default/objects/salesforce_contact__x/fields/sfid__c.field-meta.xml
<CustomField>
    <fullName>sfid__c</fullName>
    <description>sfid</description>
    <externalDeveloperName>sfid</externalDeveloperName>
    <label>sfid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>