force-app/main/default/objects/salesforce_contact__x/fields/systemmodstamp__c.field-meta.xml
<CustomField>
    <fullName>systemmodstamp__c</fullName>
    <description>systemmodstamp</description>
    <externalDeveloperName>systemmodstamp</externalDeveloperName>
    <label>systemmodstamp</label>
    <type>DateTime</type>
</CustomField>